--- a/resources/css/grid.css
+++ b/resources/css/grid.css
@@ -163,7 +163,7 @@
 
 .sidebar-container {
     height: calc(100vh - 3.5rem);
-    /* position: fixed; */
+    position: fixed;
     right: 0;
     top: 3.5rem;
     z-index: 10000;
@@ -172,6 +172,7 @@
 .sidebar-wrapper {
     padding: 1rem 0;
     overflow: auto;
+    height: 100%;
 }
 
 .sidebar-wrapper::-webkit-scrollbar {
