--- a/public/css/main.css
+++ b/public/css/main.css
@@ -188,6 +188,7 @@
     right: 0;
     top: 3.5rem;
     z-index: 10000;
+    width: 14rem;
 }
 
 .sidebar-wrapper {
@@ -283,7 +284,7 @@ button {
 }
 
 .sidebar-dropdown a::before,
-button::before {
+.sidebar-dropdown button::before {
     content: '»';
     margin: .8rem;
 }
@@ -395,4 +396,12 @@ button:hover {
 
 .bg-custom-blue {
     background: linear-gradient(to right, #01dbdf, #01a9ac);
+}
+
+.font-size-12 {
+    font-size: 12px;
+}
+
+.width-16-rem {
+    width: 16rem;
 }
