--- a/resources/css/grid.css
+++ b/resources/css/grid.css
@@ -167,6 +167,7 @@
     right: 0;
     top: 3.5rem;
     z-index: 10000;
+    width: 14rem;
 }
 
 .sidebar-wrapper {
@@ -262,7 +263,7 @@ button {
 }
 
 .sidebar-dropdown a::before,
-button::before {
+.sidebar-dropdown button::before {
     content: '»';
     margin: .8rem;
 }
